new proj/src/objects/GE_SS_Field_Problem__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_Customer_Complaint_Needed__c</fullName>
        <label>Customer Complaint Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Downtime_Recorded_Against_VG__c</fullName>
        <label>Downtime Recorded Against VG (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_If_Yes_Enter_CCRP_Number__c</fullName>
        <label>If Yes, Enter CCRP Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Problem_Cause_Opinion__c</fullName>
        <label>Problem Cause/Opinion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Problem_Code__c</fullName>
        <label>Problem Code</label>
        <picklist>
            <picklistValues>
                <fullName>Fail to function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail to engage/connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail to disengage/disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail to pass test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Problem_Description__c</fullName>
        <label>Problem Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Type_of_Field_Problem__c</fullName>
        <label>Type of Field Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Field Problems</relationshipLabel>
        <relationshipName>Field_Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Problem</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Field Problems Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>